# Compiler-generator

./: .gitignore  CMakeLists.txt  README.md  build_all.bat  run_analyzer.bat  run_generator.bat
analyzer/: CMakeLists.txt  main.cpp
analyzer/ir/: USAGE.md  ast.h  code_emitter.cpp  code_emitter.h  ir_generator.cpp  ir_generator.h  ir_pipeline_api.cpp  ir_pipeline_api.h  ir_selftest.cpp  quadruple.h  semantic_error.h  symbol_table.cpp  symbol_table.h  syntax_ast_adapter.h
analyzer/tests/: ir_test_suite.cpp  ir_test_suite.h  pipeline_e2e_test_suite.cpp  pipeline_e2e_test_suite.h
common/: pipeline_api.h  token.cpp  token.h
doc/: syntax_report.docx  yacc.md  中间代码生成设计文档.md
generator/: CMakeLists.txt
generator/lexical/: .gitignore  CMakeLists.txt  DFA.cpp  DFA.h  GenCode.cpp  GenCode.h  Infix2Postfix.cpp  Infix2Postfix.h  NFA.cpp  NFA.h  NormaliseRE.cpp  NormaliseRE.h  README.md  ReadLex.cpp  ReadLex.h  UPLOAD_LIST.md  c99.l  lexer.cpp  lexical_generator.cpp  main.cpp  test.txt
generator/syntax/: action.cpp  action.h  associativity.h  ast_node.cpp  ast_node.h  ast_tree.cpp  ast_tree.h  grammar.cpp  grammar.h  lr_item.cpp  lr_item.h  lr_parser.cpp  lr_parser.h  lr_state.cpp  lr_state.h  production.cpp  production.h  symbol.cpp  symbol.h  syntax_generator.cpp  syntax_rule_parser.cpp  syntax_rule_parser.h  temp.txt
resource/rule/: syntax_rule.txt  syntax_test.txt
resource/rule/lexical/: lexical_rule.txt
resource/source/: syntax_parser.cpp  syntax_parser.h
tests/: lex_yacc_literals.c  lex_yacc_smoke.c  run_all_tests.bat
tests/ir/: ir_unit_tests.cpp  run_ir_unit_tests.bat
tests/lex_yacc/: lex_yacc_advanced_features.c  lex_yacc_bitops.c  lex_yacc_comprehensive_demo.c  lex_yacc_exprs.c  lex_yacc_extended.c  run_lex_yacc_tests.bat
tests/scratch/: tmp_char_escape.c  tmp_char_quote.c  tmp_char_simple.c  tmp_char_slash.c  tmp_string_escape.c  tmp_string_quote.c
tests/system/: run_system_tests.bat  system_integration_tests.cpp
tests/system/basic/: core_06_undeclared_rhs.c  core_07_invalid_lhs_assign.c  core_08_out_of_subset_while_break.c  flow_01_decl_assign_return.c  flow_02_if_else.c  flow_03_while_break.c  flow_04_while_continue.c  flow_05_function_call.c  flow_06_array_call.c  flow_07_logic_compare.c
tests/system/stress/: b_array_01.c  b_array_02.c  b_array_03.c  b_array_04.c  b_array_05.c  b_array_06.c  b_array_07.c  b_array_08.c  b_array_09.c  b_array_10.c  b_array_11.c  b_array_12.c  b_array_13.c  b_array_14.c  b_array_15.c  b_array_16.c  b_array_17.c  b_array_18.c  b_array_19.c  b_array_20.c  b_array_21.c  b_array_22.c  b_array_23.c  b_array_24.c  b_array_25.c  b_array_26.c  b_array_27.c  b_array_28.c  b_array_29.c  b_array_30.c  b_array_31.c  b_array_32.c  b_array_33.c  b_array_34.c  b_array_35.c  b_array_36.c  b_array_37.c  b_array_38.c  b_array_39.c  b_array_40.c  (+80 more)
